modify: 플그 멤버 프로필을 받아오기 위해 플그 아이디를 추가로 요청하도록 수정 (#216)